# cpp-cc

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.name}}/: .clang-format  .gitignore  CMakeLists.txt  README.md  package.yaml  stack.yaml
{{cookiecutter.name}}/app/: Main.hs
{{cookiecutter.name}}/apps/: hello_version.cpp
{{cookiecutter.name}}/benchmarks/: Main.hs
{{cookiecutter.name}}/examples/: {{cookiecutter.name}}_example.cpp
{{cookiecutter.name}}/src/: {{cookiecutter.module}}.hs
{{cookiecutter.name}}/src/{{cookiecutter.name}}/: version.cpp  version.hpp
{{cookiecutter.name}}/test/: SomeFuncTest.hs  {{cookiecutter.module}}Spec.hs  {{cookiecutter.module}}Tests.hs  {{cookiecutter.name}}_tests.cpp
{{cookiecutter.name}}/test/src/: test_version.cpp
